fix: patch left arm swing triggering rclick event